--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Hasyed89.github.io/repository-Todolist",
+  "homepage": "https://Hasyed89.github.io/Todolist",
   "name": "redux-todo",
   "version": "0.1.0",
   "private": true,
